# SATSolver

./: .gitignore  CMakeLists.txt  README.md  analysis.py  analyze_random.py  analyze_uf.py  main.cpp  random_run.csv  results.txt  test.sh  test_correctness.sh  test_random.sh  test_uf.sh  uf_run.csv  util.cc  util.h
cnf/: cdcl.cnf  extract.sh  unsat.cnf
solvers/: backtracking_solver.cc  backtracking_solver.h  cdcl_solver.cc  cdcl_solver.h  dpll_solver.cc  dpll_solver.h  schoning_solver.cc  schoning_solver.h  solver.cc  solver.h
types/: assignment.cc  assignment.h  clause.cc  clause.h  clause_list.cc  clause_list.h  implication_graph.cc  implication_graph.h  literal.cc  literal.h  variable.cc  variable.h
